force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Payment_Amount_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Payment_Amount_Type__c</fullName>
    <description>This field is optional. It is a picklist that specifies the type of payment amount. NOTE: This amount, when used in the context of a recharacterization, includes the contribution amount plus earnings attributable.</description>
    <inlineHelpText>Specifies the type of payment amount. NOTE: This amount when used in the context of a recharacterization includes the contribution amount plus earnings attributable.</inlineHelpText>
    <label>Payment Amount Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Entire balance or contribution amount</fullName>
            </value>
            <value>
                <fullName>Portion of balance or contribution amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>