force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Portion_Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Portion_Description__c</fullName>
    <description>This field is optional. It describes the portion of the account balance to be converted, transferred, or directly rolled over. In the case of a recharacterization, it is the contribution amount plus earnings attributable to be recharacterized.</description>
    <inlineHelpText>Describes the portion of the account balance to be converted transferred or directly rolled over or in the case of a recharacterization the contribution amount plus earnings attributable to be recharacterized.</inlineHelpText>
    <label>Portion Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>