force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Request_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Request_Payment_Type__c</fullName>
    <description>This field is optional. It is a picklist that specifies the investment payment schedule and type.</description>
    <inlineHelpText>Specifies the investment payment schedule and type.</inlineHelpText>
    <label>Request Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Immediately liquidate investments and send cash</fullName>
            </value>
            <value>
                <fullName>Liquidate specified investments</fullName>
            </value>
            <value>
                <fullName>Send all investments in kind</fullName>
            </value>
            <value>
                <fullName>Send assets at maturity</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>