force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Request_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Request_Type__c</fullName>
    <description>This field is optional. It is a picklist that specifies the type of request.</description>
    <inlineHelpText>Specifies the type of request.</inlineHelpText>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>Direct Rollover</fullName>
            </value>
            <value>
                <fullName>Funding Distribution</fullName>
            </value>
            <value>
                <fullName>Conversion</fullName>
            </value>
            <value>
                <fullName>Recharacterization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>