force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Roth_Beneficiary_Contribution_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Roth_Beneficiary_Contribution_Type__c</fullName>
    <description>This field is optional. It is a picklist that specifies the type of contribution for a Roth Beneficiary IRA.</description>
    <inlineHelpText>Specifies the type of contribution for a Roth Beneficiary IRA.</inlineHelpText>
    <label>Roth Beneficiary Contribution Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Transfer from a Roth IRA</fullName>
            </value>
            <value>
                <fullName>Rollover/Direct Rollover from a Designated Roth Account</fullName>
            </value>
            <value>
                <fullName>Rollover/Direct Rollover from an Eligible Retirement Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>