force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Roth_Contribution_Reason__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Roth_Contribution_Reason__c</fullName>
    <description>This field is optional. It is the contribution type reason code. The Roth IRA Contribution Type is Qualified Reservists/Designated Disaster Distribution Repayment or Disaster/Combat Zone Postponed Contribution.</description>
    <inlineHelpText>The contribution type reason code.  The Roth IRA Contribution Type is Qualified Reservists/Designated Disaster Distribution Repayment or Disaster/Combat Zone Postponed Contribution.</inlineHelpText>
    <label>Roth Contribution Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>