force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Roth_IRA_Distribution_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Roth_IRA_Distribution_Type__c</fullName>
    <description>This field is optional. It is a picklist that specifies the type of distribution for a Roth IRA.</description>
    <inlineHelpText>Specifies the type of distribution for a Roth IRA.</inlineHelpText>
    <label>Roth IRA Distribution Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Early Distribution from a Roth IRA</fullName>
            </value>
            <value>
                <fullName>Age 59 1/2 or Older</fullName>
            </value>
            <value>
                <fullName>Death</fullName>
            </value>
            <value>
                <fullName>Transfer to my Roth IRA</fullName>
            </value>
            <value>
                <fullName>Transfer to spouse&apos;s Roth IRA due to death</fullName>
            </value>
            <value>
                <fullName>Transfer to former spouse&apos;s Roth IRA due to divorce or legal separation</fullName>
            </value>
            <value>
                <fullName>Recharacterization of prior tax year regular contribution/conversion in the current year</fullName>
            </value>
            <value>
                <fullName>Recharacterization of current tax year regular contribution/conversion in the current year</fullName>
            </value>
            <value>
                <fullName>Prohibited Transaction</fullName>
            </value>
            <value>
                <fullName>Qualified Health Savings Account Funding Distribution (QHSAAFD)</fullName>
            </value>
            <value>
                <fullName>IRS Levy</fullName>
            </value>
            <value>
                <fullName>Disability</fullName>
            </value>
            <value>
                <fullName>Revocation</fullName>
            </value>
            <value>
                <fullName>Correction of Excess Contribution in same year as excess contribution</fullName>
            </value>
            <value>
                <fullName>Correction of Excess Contribution in year after excess contribution, but by my tax-filing due date</fullName>
            </value>
            <value>
                <fullName>Correction of Excess Contribution after my tax-filing due date</fullName>
            </value>
            <value>
                <fullName>Transfer to beneficiary&apos;s Roth Beneficiary IRA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>