force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Simple_IRA_Contibution_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Simple_IRA_Contibution_Type__c</fullName>
    <description>This field is optional. It is a picklist that specifies the type of contribution for a SIMPLE IRA.</description>
    <inlineHelpText>Specifies the type of contribution for a SIMPLE IRA.</inlineHelpText>
    <label>SIMPLE IRA Contibution Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Employer Contribution</fullName>
            </value>
            <value>
                <fullName>Rollover from a SIMPLE IRA</fullName>
            </value>
            <value>
                <fullName>Transfer from a SIMPLE IRA</fullName>
            </value>
            <value>
                <fullName>Recharacterization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>