force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__State_Income_Withholdings_Indicator__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__State_Income_Withholdings_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional. It indicates if the account holder elects at the time of a specific IRA or other tax-deferred plan distribution to have state income tax withheld.</description>
    <inlineHelpText>The account holder elects at the time of a specific IRA or other tax-deferred plan distribution to have state income tax withheld.</inlineHelpText>
    <label>State Income Withholdings Indicator</label>
    <type>Checkbox</type>
</CustomField>