force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__State_Income_Withholdings_Percentage__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__State_Income_Withholdings_Percentage__c</fullName>
    <description>This field is optional. It is the percentage that the IRA owner elects to have withheld from the IRA distribution for state income tax purposes.</description>
    <inlineHelpText>The percentage that the IRA owner elects to have withheld from the IRA distribution for state income tax purposes.</inlineHelpText>
    <label>State Income Withholdings Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>