force-app/main/default/objects/LLC_BI__Transaction_Request__c/fields/LLC_BI__Transfer_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Transfer_Account_ID__c</fullName>
    <description>This field is optional. It is the identification number assigned to the account or plan at the transferring financial institution. For recharacterizations, this is the plan or account number of the plan where the original contribution was made that is to be recharacterized. It may be at either the same or a third party (&quot;transferor&quot;) financial institution.</description>
    <inlineHelpText>The ID assigned to the account or plan at the transferring financial institution. For recharacterizations, this is the ID number of the plan where the original contribution was made.</inlineHelpText>
    <label>Transfer Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>